[tool.poetry]
name = "neo4j-uploader-gcf"
version = "0.1.0"
description = ""
authors = ["Jason Koo <jalakoo@gmail.com>"]
readme = "README.md"
packages = [{include = "neo4j_uploader_gcf"}]

[tool.poetry.dependencies]
python = "^3.11"
functions-framework = "^3.4.0"
neo4j-uploader = "^0.5.1"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
