[tool.poetry]
name = "neo4j-uploader-gcf"
version = "0.3.0"
description = "Google Cloud Function wrapper for the neo4j_uploader python package"
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
functions-framework = "^3.5.0"
neo4j-uploader = "^0.5.3"
basicauth = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
